--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,12 @@ buildscript {
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE"
         classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0.1"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.1"
     }
 }
 
 plugins {
-    id "org.sonarqube" version "2.0.1"
+    id "org.sonarqube" version "2.1"
 }
 
 configure(allprojects) {
@@ -45,6 +45,14 @@ subprojects {
         properties {
             //noinspection GroovyAssignabilityCheck
             property "sonar.sourceEncoding", "UTF-8"
+            //noinspection GroovyAssignabilityCheck
+            property "sonar.tests", "test"
+            //noinspection GroovyAssignabilityCheck
+            property "sonar.host.url", "http://sonar.zbsg.com.cn"
+            //noinspection GroovyAssignabilityCheck
+            property "sonar.login", "admin"
+            //noinspection GroovyAssignabilityCheck
+            property "sonar.password", "ZkT7tno9h2wK8BN"
         }
     }
 
