--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,8 @@ subprojects {
         properties {
             //noinspection GroovyAssignabilityCheck
             property "sonar.sourceEncoding", "UTF-8"
-            properties["sonar.sources"] += sourceSets.main.java.srcDirs
-            properties["sonar.tests"] += sourceSets.test.java.srcDirs
+            properties["sonar.sources"] = sourceSets.main.allSource.srcDirs
+            properties["sonar.tests"] = sourceSets.test.allSource.srcDirs
         }
     }
 
