--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,9 @@ subprojects {
             //noinspection GroovyAssignabilityCheck
             property "sonar.sourceEncoding", "UTF-8"
             //noinspection GroovyAssignabilityCheck
-            property "sonar.sources", sourceSets.main.allSource.srcDirs
+            properties["sonar.sources"] += sourceSets.main.allSource.srcDirs
             //noinspection GroovyAssignabilityCheck
-            property "sonar.tests", sourceSets.test.allSource.srcDirs
+            properties["sonar.tests"] += sourceSets.test.allSource.srcDirs
         }
     }
 
