--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,6 +4,18 @@ configurations{
     compile.exclude module: "spring-boot-starter-tomcat"
 }
 
+sonarqube {
+    //noinspection GroovyAssignabilityCheck
+    properties {
+        //noinspection GroovyAssignabilityCheck
+        property "sonar.sourceEncoding", "UTF-8"
+        //noinspection GroovyAssignabilityCheck
+        property "sonar.sources", sourceSets.main.allSource.srcDirs
+        //noinspection GroovyAssignabilityCheck
+        property "sonar.tests", sourceSets.test.allSource.srcDirs
+    }
+}
+
 dependencies {
     optional "org.springframework.boot:spring-boot-configuration-processor:1.4.0.RELEASE"
     compile("org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE") {
