--- a/core/test/config/application.properties
+++ b/core/test/config/application.properties
@@ -48,11 +48,11 @@ spring.thymeleaf.cache=false
 
 # swagger config
 springfox.documentation.swagger.v2.path=/api-docs
-spring.swagger.api.title=JFantasy RESTful API
-spring.swagger.api.description=JFantasy RESTful API \u6587\u6863
-spring.swagger.api.version=1.0.5
-spring.swagger.api.termsOfServiceUrl=http://service.jfantasy.org
-spring.swagger.api.contact.name=\u674E\u8302\u5CF0
-spring.swagger.api.contact.email=limaofeng@msn.com
-spring.swagger.api.licence=MIT
-spring.swagger.api.licenseUrl=#
+springfox.documentation.swagger.api.title=JFantasy RESTful API
+springfox.documentation.swagger.api.description=JFantasy RESTful API \u6587\u6863
+springfox.documentation.swagger.api.version=1.0.5
+springfox.documentation.swagger.api.termsOfServiceUrl=http://service.jfantasy.org
+springfox.documentation.swagger.api.contact.name=\u674E\u8302\u5CF0
+springfox.documentation.swagger.api.contact.email=limaofeng@msn.com
+springfox.documentation.swagger.api.licence=MIT
+springfox.documentation.swagger.api.licenseUrl=#
