解决 swagger 2.0 验证错误

--- a/oauth/test/config/application.properties
+++ b/oauth/test/config/application.properties
@@ -6,5 +6,5 @@ springfox.documentation.swagger.api.version=1.0.5
 springfox.documentation.swagger.api.termsOfServiceUrl=http://service.jfantasy.org
 springfox.documentation.swagger.api.contact.name=\u674E\u8302\u5CF0
 springfox.documentation.swagger.api.contact.email=limaofeng@msn.com
-springfox.documentation.swagger.api.licence=MIT
+springfox.documentation.swagger.api.license=MIT
 springfox.documentation.swagger.api.licenseUrl=#
