--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,3 @@
-image: limaofeng/gradle-alpine
-
-before_script:
-  - echo 10.45.21.126 maven.zbsg.com.cn >> /etc/hosts
-
 stages:
   - build
   - test
@@ -13,7 +8,7 @@ build:
   script:
     - gradle clean classes -x test
   tags:
-    - docker
+    - shell
 
 sonar:
   stage: test
@@ -22,7 +17,7 @@ sonar:
   only:
     - tags
   tags:
-    - docker
+    - shell
 
 deploy:
   stage: deploy
@@ -31,4 +26,4 @@ deploy:
   only:
     - tags
   tags:
-    - docker
+    - shell
