返回订单在交易系统中的编号

--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ subprojects {
     }
 
     artifacts {
+        archives packageSources
         archives sourcesJar
     }
 
@@ -103,8 +104,6 @@ subprojects {
             }
         }
     }
-
-    artifacts.archives packageSources
 
     repositories {
         maven { url "http://maven.zbsg.com.cn/content/groups/public" }
