--- a/pay/resources/application.properties
+++ b/pay/resources/application.properties
@@ -1,2 +1,9 @@
 # jackson config
-spring.jackson.mixin.packages=org.jfantasy.pay.product,org.jfantasy.pay.bean,org.jfantasy.pay.order.entity
+spring.jackson.mixin.packages=\
+  org.jfantasy.pay.product,\
+  org.jfantasy.pay.order.entity,\
+  org.jfantasy.card.bean,\
+  org.jfantasy.logistics.bean,\
+  org.jfantasy.order.bean,\
+  org.jfantasy.pay.bean,\
+  org.jfantasy.trade.bean
