--- a/core/build.gradle
+++ b/core/build.gradle
@@ -52,6 +52,6 @@ dependencies {
     compile "org.springframework:spring-context-support:4.3.2.RELEASE"
     compile "javax:javaee-api:7.0"
     testCompile "org.springframework.boot:spring-boot-starter-test:1.4.0.RELEASE"
-    testCompile "junit:junit:4.9"
+    testCompile 'junit:junit:4.12'
     testCompile "org.wltea:IKAnalyzer:3.2.8"
 }
