--- a/wallet/build.gradle
+++ b/wallet/build.gradle
@@ -7,6 +7,6 @@ sonarqube {
 dependencies {
     compile project(':jfantasy-member')
     compile "com.aliyun.openservices:ons-client:1.2.1"
-    compile 'junit:junit:4.9'
+    testCompile 'junit:junit:4.12'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.4.0.RELEASE'
 }
