显示处理中的交易，不然提现记录无法显示

--- a/member/build.gradle
+++ b/member/build.gradle
@@ -7,5 +7,6 @@ dependencies {
     compile project(':jfantasy-file-sdk')
     compile project(':jfantasy-security')
     compile project(':jfantasy-aliyun-ons')
+    compile project(':jfantasy-weixin')
     testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
