--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ include ':jfantasy-system'
 include ':jfantasy-oauth'
 include ':jfantasy-oauth-api'
 include ':jfantasy-wallet'
-include ':jfantasy-thirdparty'
+include ':jfantasy-weixin'
 include ':jfantasy-file-sdk'
 include ':jfantasy-common-sdk'
 
@@ -35,7 +35,7 @@ project(':jfantasy-system').projectDir = "$rootDir/system" as File
 project(':jfantasy-oauth').projectDir = "$rootDir/oauth" as File
 project(':jfantasy-oauth-api').projectDir = "$rootDir/oauth-api" as File
 project(':jfantasy-wallet').projectDir = "$rootDir/wallet" as File
-project(':jfantasy-thirdparty').projectDir = "$rootDir/thirdparty" as File
+project(':jfantasy-weixin').projectDir = "$rootDir/weixin" as File
 
 // sdk list
 project(':jfantasy-file-sdk').projectDir = "$rootDir/file-sdk" as File
