--- a/member/build.gradle
+++ b/member/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     compile project(':jfantasy-common-sdk')
     compile project(':jfantasy-file-sdk')
     compile project(':jfantasy-security')
-    compile project(':jfantasy-aliyun-ons')
+    compile project(':jfantasy-aliyun')
     compile project(':jfantasy-weixin')
     testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
