--- a/pay-client/build.gradle
+++ b/pay-client/build.gradle
@@ -7,7 +7,7 @@ sonarqube {
 dependencies {
     compile project(':jfantasy-core')
     compile project(':jfantasy-pay-api')
-    compile project(':jfantasy-aliyun-ons')
+    compile project(':jfantasy-aliyun')
     compile project(':jfantasy-rpc-client')
     compile "com.aliyun.openservices:ons-client:1.2.1"
     testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
