--- a/trade/build.gradle
+++ b/trade/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     compile project(':jfantasy-core')
     compile project(':jfantasy-pay-api')
     compile project(':jfantasy-oauth-api')
-    compile project(':jfantasy-aliyun-ons')
+    compile project(':jfantasy-aliyun')
     compile project(':jfantasy-rpc-client')
     compile project(':jfantasy-rpc-server')
     compile project(':jfantasy-common-sdk')
