--- a/security/build.gradle
+++ b/security/build.gradle
@@ -3,6 +3,7 @@ description = '权限及认证中心'
 dependencies {
     compile project(':jfantasy-core')
     compile project(':jfantasy-file-sdk')
+    compile project(':jfantasy-oauth-api')
     compile "org.springframework.security:spring-security-core:4.1.1.RELEASE"
     compile "org.springframework.security:spring-security-web:4.1.1.RELEASE"
     testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
