--- a/security/test/config/application.yml
+++ b/security/test/config/application.yml
@@ -10,9 +10,9 @@ spring:
   datasource:
     name: datasource
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://shzbsg2006.mysql.rds.aliyuncs.com:3306/auth?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-    username: shzbsgv2
-    password: shzbsg
+    url: jdbc:mysql://localhost:3306/auth?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+    username: root
+    password:
     driver-class-name: com.mysql.jdbc.Driver
     druid:
       filters: stat,wall
