--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,7 +27,6 @@ dependencies {
     // springfox
     compile "io.springfox:springfox-petstore:${springfoxVersion}"
     compile "io.springfox:springfox-swagger2:${springfoxVersion}"
-    compile "io.springfox.ui:springfox-swagger-ui-rfc6570:1.0.0"
     // jackson
     compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
     compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
@@ -52,8 +51,9 @@ dependencies {
     compile "org.apache.ant:ant:1.9.5"
     compile "com.github.jknack:handlebars:4.0.6"
     compile "commons-io:commons-io:2.0.1"
-    compile "asm:asm-util:3.3"
-    compile "asm:asm-commons:3.3"
+    // asm and cglib
+    compile "asm:asm-util:3.3.1"
+    compile "asm:asm-commons:3.3.1"
     compile "cglib:cglib:2.2.2"
     compile "net.sourceforge.htmlcleaner:htmlcleaner:2.8"
     compile "org.apache.httpcomponents:httpmime:4.3.5"
