解决编译问题

--- a/member/build.gradle
+++ b/member/build.gradle
@@ -2,12 +2,14 @@
 description = ' 会员模块 '
 dependencies {
     compile project(':jfantasy-oauth-api')
-    compile project(':jfantasy-core')
     compile project(':jfantasy-common-sdk')
     compile project(':jfantasy-file-sdk')
     compile project(':jfantasy-security')
     compile project(':jfantasy-aliyun')
     compile project(':jfantasy-weixin')
-    compile 'cn.com.zbsg:api-mcenter-sdk:2.2.3'
+    runtime ('cn.com.zbsg:api-mcenter-sdk:2.2.3'){
+        exclude group: "org.jfantasy", module: "jfantasy-core"
+    }
+    compile project(':jfantasy-core')
     testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
