删除无用代码

--- a/filestore/test/config/application.yml
+++ b/filestore/test/config/application.yml
@@ -27,7 +27,7 @@ spring:
       test-on-borrow: false
       test-on-return: false
   redis:
-    host: 127.0.0.1
+    host: 192.16.10.211
     port: 6379
     password:
   jpa:
@@ -54,10 +54,10 @@ spring:
     cache: false
   jackson:
     mixin:
-      packages: org.jfantasy.pay.product,org.jfantasy.pay.bean,org.jfantasy.pay.order.entity
+      packages: org.jfantasy.filestore.bean
   oauth:
     redis:
-      host: 127.0.0.1
+      host: 192.16.10.211
       port: 6379
   apigateway:
     url: http://localhost:8000
