--- a/core/build.gradle
+++ b/core/build.gradle
@@ -72,4 +72,5 @@ dependencies {
     testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
     testCompile 'junit:junit:4.12'
     testCompile "org.wltea:IKAnalyzer:3.2.8"
+    testCompile 'org.codehaus.groovy:groovy-all:2.4.7'
 }
