--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,7 @@ include ':jfantasy-rpc-client'
 project(':jfantasy-core').projectDir = "$rootDir/core" as File
 project(':jfantasy-cache').projectDir = "$rootDir/cache" as File
 project(':jfantasy-filestore').projectDir = "$rootDir/filestore" as File
+project(':jfantasy-pay-api').projectDir = "$rootDir/pay-api" as File
 project(':jfantasy-common').projectDir = "$rootDir/common" as File
 project(':jfantasy-pay-client').projectDir = "$rootDir/pay-client" as File
 project(':jfantasy-system').projectDir = "$rootDir/system" as File
