启动报错修改

--- a/rpc-server/test/config/application.properties
+++ b/rpc-server/test/config/application.properties
@@ -2,3 +2,7 @@ rpc.server.host=127.0.0.1
 rpc.server.ioThreadNum=5
 rpc.server.backlog=1024
 rpc.server.port=9090
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=
