--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,14 +10,14 @@ build:
   tags:
     - shell
 
-#sonar:
-#  stage: test
-#  script:
-#    - gradle testClasses sonarqube -x test -Dsonar.host.url=http://sonar.zbsg.com.cn -Dsonar.login=$SONAR_TOKEN -Dsonar.verbose=true
-#  only:
-#    - tags
-#  tags:
-#    - shell
+test:
+  stage: test
+  script:
+    - gradle testClasses sonarqube -x test -Dsonar.host.url=http://sonar.zbsg.com.cn -Dsonar.login=$SONAR_TOKEN -Dsonar.verbose=true
+  only:
+    - tags
+  tags:
+    - shell
 
 deploy:
   stage: deploy
