--- a/core/build.gradle
+++ b/core/build.gradle
@@ -31,13 +31,12 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
     compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
     // mybatis
-    compile "org.mybatis:mybatis:3.3.1"
-    compile "org.mybatis:mybatis-spring:1.2.4"
+    compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0'
     // quartz
     compile "org.quartz-scheduler:quartz:2.2.1"
     compile "org.quartz-scheduler:quartz-jobs:2.2.1"
     // mysql
-    compile "mysql:mysql-connector-java:5.1.22"
+    compile "mysql:mysql-connector-java:5.1.39"
     // unirest
     compile "com.mashape.unirest:unirest-java:1.4.9"
     // lucene
@@ -74,9 +73,4 @@ dependencies {
     testCompile "org.wltea:IKAnalyzer:3.2.8"
     testCompile 'org.codehaus.groovy:groovy-all:2.4.7'
     testCompile 'org.xhtmlrenderer:flying-saucer-pdf-itext5:9.0.8'
-    //testCompile 'org.xhtmlrenderer:core-renderer:8.0'
-    //testCompile fileTree(dir: 'libs', include: ['*.jar'])
-    //testCompile group: 'com.itextpdf', name: 'itext-asian', version: '5.2.0'
-    //testCompile 'com.itextpdf:itextpdf:5.5.11'
-    //testCompile 'com.itextpdf.tool:xmlworker:5.5.11'
 }
