--- a/core/resources/application.properties
+++ b/core/resources/application.properties
@@ -1,4 +1,4 @@
 # mybatis config
-spring.mybatis.plugins=org.jfantasy.framework.dao.mybatis.interceptors.MultiDataSourceInterceptor;org.jfantasy.framework.dao.mybatis.interceptors.AutoKeyInterceptor;
+mybatis.mapper-locations=classpath*:org/jfantasy/**/dao/*-Mapper.xml
 # jackson mixin config
 spring.jackson.mixin.packages=
