--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
     repositories {
         maven { url "http://maven.zbsg.com.cn/content/groups/public/" }
-        maven { url "http://maven.zbsg.com.cn/content/repositories/aliyun/" }
-        maven { url "https://plugins.gradle.org/m2/" }
+        mavenCentral()
+        mavenLocal()
     }
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.4.1.RELEASE"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.4.RELEASE"
         classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.1"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5"
     }
 }
 
 plugins {
-    id "org.sonarqube" version "2.1"
+    id "org.sonarqube" version "2.5"
 }
 
 apply from: "$rootDir/gradle/dependencies.gradle"
@@ -57,6 +57,7 @@ subprojects {
         main {
             java.srcDirs = ['JavaSource']
             resources.srcDirs = ["resources"]
+            output.classesDir = new File(buildDir, "classes/main")
         }
         test {
             java.srcDirs = ['test/src']
