--- a/core/build.gradle
+++ b/core/build.gradle
@@ -16,7 +16,6 @@ dependencies {
     optional "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
         exclude group: "org.springframework.boot", module: "spring-boot-starte-tomcat"
-        exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
     }
     compile "org.springframework.boot:spring-boot-starter-undertow:${springBootVersion}"
     compile "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
@@ -24,17 +23,11 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-hateoas:${springBootVersion}") {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-web"
     }
-    // springfox
-    compile "io.springfox:springfox-petstore:${springfoxVersion}"
-    compile "io.springfox:springfox-swagger2:${springfoxVersion}"
-    // jackson
-    compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
-    compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
     // mybatis
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0'
     // quartz
-    compile "org.quartz-scheduler:quartz:2.2.1"
-    compile "org.quartz-scheduler:quartz-jobs:2.2.1"
+    compile "org.quartz-scheduler:quartz:${quartzVersion}"
+    compile "org.quartz-scheduler:quartz-jobs:${quartzVersion}"
     // mysql
     compile "mysql:mysql-connector-java:5.1.39"
     // unirest
@@ -49,7 +42,7 @@ dependencies {
     compile "commons-beanutils:commons-beanutils:1.9.2"
     compile "org.apache.ant:ant:1.9.5"
     compile "com.github.jknack:handlebars:4.0.6"
-    compile "commons-io:commons-io:2.0.1"
+    compile "commons-io:commons-io:2.5"
     // asm and cglib
     compile "asm:asm-util:3.3.1"
     compile "asm:asm-commons:3.3.1"
