--- a/weixin/build.gradle
+++ b/weixin/build.gradle
@@ -3,5 +3,5 @@ dependencies {
     compile 'com.github.binarywang:weixin-java-mp:2.4.0'
     compile 'com.github.binarywang:weixin-java-cp:2.4.0'
     compile project(':jfantasy-core')
-    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.4.0.RELEASE'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:${springBootVersion}'
 }
