--- a/core/test/config/application.properties
+++ b/core/test/config/application.properties
@@ -2,25 +2,9 @@
 logging.config=classpath:logback.xml
 logging.path=/Users/limaofeng/framework/core/build/logs
 # datasource config
-spring.datasource.name=datasource
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/website?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.filters=stat,wall
-spring.datasource.maxActive=20
-spring.datasource.initialSize=1
-spring.datasource.maxWait=60000
-spring.datasource.minIdle=1
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=select 'x'
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxOpenPreparedStatements=20
 
 spring.redis.host=localhost
 spring.redis.password=
@@ -33,7 +17,7 @@ spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 
 spring.jpa.properties.hibernate.ejb.identifier_generator_strategy_provider=org.jfantasy.framework.dao.hibernate.spi.CustomIdentifierGeneratorStrategyProvider
