添加 springfox 过度方案

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include ':jfantasy-pay-api'
 include ':jfantasy-pay-client'
 include ':jfantasy-weixin'
 include ':jfantasy-aliyun'
+include ':springfox'
 include ':jfantasy-rpc-common'
 include ':jfantasy-rpc-server'
 include ':jfantasy-rpc-client'
@@ -17,6 +18,7 @@ project(':jfantasy-weixin').projectDir = "$rootDir/weixin" as File
 
 // sdk list
 project(':jfantasy-aliyun').projectDir = "$rootDir/aliyun" as File
+project(':springfox').projectDir = "$rootDir/springfox" as File
 
 // RPC 调用
 project(':jfantasy-rpc-common').projectDir = "$rootDir/rpc-common" as File
