添加 sonarqube 的单元测试覆盖报告

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
 test:
   stage: test
   script:
-    - gradle testClasses sonarqube -x test -Dsonar.host.url=http://sonar.zbsg.com.cn -Dsonar.login=$SONAR_TOKEN -Dsonar.verbose=true
+    - gradle sonarqube -Dsonar.host.url=http://sonar.zbsg.com.cn -Dsonar.login=$SONAR_TOKEN -Dsonar.verbose=true
   tags:
     - shell
 
