--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,19 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
+    apply plugin: "jacoco"
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
     test {
         ignoreFailures = true
+
+        jacoco{
+            append = false
+            destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+            classDumpDir = file("$buildDir/jacoco/classpathdumps")
+        }
     }
 
     sonarqube {
