--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,8 @@ sonar:
     MYSQL_ROOT_PASSWORD: 123456
   script:
     - env
-    - yum install mysql
-    - mysql -e " SET PASSWORD FOR 'root'@'localhost' = PASSWORD('123456') " -uroot
+    - ping mysql
+    - mysql -e " SET PASSWORD FOR 'root'@'mysql' = PASSWORD('123456') " -uroot
 #    - gradle sonarqube -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.verbose=true
 #  only:
 #    - tags
