--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ sonar:
     MYSQL_ROOT_PASSWORD: 123456
   script:
     - env
-    - mysql -u root@mysql -p 123456
+    - mysql -h mysql -u root -p 123456
     - mysql -e " SET PASSWORD FOR 'root'@'mysql' = PASSWORD('123456') " -uroot
 #    - gradle sonarqube -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.verbose=true
 #  only:
