--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ subprojects {
         jacoco {
             append = false
             destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
-            classDumpDir = file("$buildDir/jacoco/classpathdumps")
+            classDumpFile = file("$buildDir/jacoco/classpathdumps")
         }
 
     }
