--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,15 +26,16 @@ sonar:
   variables:
     MYSQL_DATABASE: demo
     MYSQL_ROOT_PASSWORD: 123456
-  cache:
-    paths:
-      - ~/.gradle
   script:
     - env
     - mysql -h mysql -u root -p123456 < core/database/tables.sql
-    - gradle sonarqube -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.verbose=true
+    - gradle build -x test
+#    - gradle sonarqube -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.verbose=true
 #  only:
 #    - tags
+  cache:
+    paths:
+      - ~/.gradle
   tags:
     - docker
 
