--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,17 @@ stages:
 
 build:
   stage: build
+  before_script:
+    - export GRADLE_USER_HOME=/cache/.gradle
   script:
-    - gradle clean classes -x test
+    - ./gradlew clean classes -x test
+  cache:
+    paths:
+      - $GRADLE_USER_HOME/caches/
+      - $GRADLE_USER_HOME/wrapper/
+      - $GRADLE_USER_HOME/build-cache/
   tags:
-    - shell
+    - docker
 
 #test:
 #  stage: test
@@ -19,7 +26,6 @@ build:
 #    - shell
 
 sonar:
-  image: limaofeng/gradle-alpine:mysql
   stage: test
   services:
     - mysql:latest
@@ -30,14 +36,12 @@ sonar:
     - export GRADLE_USER_HOME=/cache/.gradle
   script:
     - mysql -h mysql -u root -p123456 < core/database/tables.sql
-    - gradle sonarqube -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.verbose=true
+    - ./gradlew sonarqube -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.verbose=true
   cache:
     paths:
       - $GRADLE_USER_HOME/caches/
       - $GRADLE_USER_HOME/wrapper/
       - $GRADLE_USER_HOME/build-cache/
-#  only:
-#    - tags
   tags:
     - docker
 
