--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@ pay-test
 oauth-test
 .vscode
 .idea
-.gradle
+#.gradle
 backup
 # Package Files #
-*.jar
 *.war
 *.ear
 *.iml
@@ -13,6 +12,5 @@ target
 build
 classes
 LOG_PATH_IS_UNDEFINED
-api-docs/node_modules
 rebel.xml
 rebel-remote.xml
