--- a/core/test/config/application.properties
+++ b/core/test/config/application.properties
@@ -2,9 +2,9 @@
 logging.config=classpath:logback.xml
 logging.path=/Users/limaofeng/framework/core/build/logs
 # datasource config
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/website?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:3306/core?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.redis.host=localhost
 spring.redis.password=
