--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ sonar:
   before_script:
     - export GRADLE_USER_HOME=/cache/.gradle
   script:
-    - mysql -h mysql -u root -p123456 < core/database/tables.sql
+    - mysql -h mysql -u root -p123456 mysql < core/database/tables.sql
     - ./gradlew sonarqube -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.verbose=true
   cache:
     paths:
