--- a/aliyun/build.gradle
+++ b/aliyun/build.gradle
@@ -7,5 +7,5 @@ sonarqube {
 dependencies {
     compile project(':jfantasy-core')
     compile 'com.aliyun.mns:aliyun-sdk-mns:1.1.8'
-    testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+    testCompile "org.springframework.boot:spring-boot-starter-test"
 }
