--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,6 +1,7 @@
 ext {
     springVersion = "4.3.9.RELEASE"
-    springBootVersion = "1.5.4.RELEASE"
+    springBootVersion = "1.5.8.RELEASE"
+    luceneVersion = "3.6.2"
     jacksonVersion = '2.8.0'
     springfoxVersion = "2.6.1"
     quartzVersion = '2.2.3'
@@ -8,25 +9,65 @@ ext {
     spock = "1.0-groovy-2.4"
 
     libs = [
-
+            lucene     : [
+                    "org.apache.lucene:lucene-core:${luceneVersion}",
+                    "org.apache.lucene:lucene-highlighter:${luceneVersion}",
+                    "org.apache.lucene:lucene-queryparser:${luceneVersion}"
+            ],
+            unirest    : [
+                    "com.mashape.unirest:unirest-java:1.4.9"
+            ],
+            quartz     : [
+                    "org.quartz-scheduler:quartz:${quartzVersion}",
+                    "org.quartz-scheduler:quartz-jobs:${quartzVersion}"
+            ],
             spring            : [
-                    "org.springframework:spring-core:$springVersion",
-                    "org.springframework:spring-web:$springVersion",
-                    "org.springframework:spring-webmvc:$springVersion"
+                    "org.springframework:spring-core",
+                    "org.springframework:spring-web",
+                    "org.springframework:spring-webmvc",
+                    "org.springframework:spring-orm",
+                    "org.springframework:spring-test",
+                    "org.springframework:spring-context-support"
 
             ],
             springBoot        : [
-                    "org.springframework.boot:spring-boot-starter-web:${springBootVersion}",
-                    "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}",
+                    "org.springframework.boot:spring-boot-starter-web",
+                    "org.springframework.boot:spring-boot-starter-undertow",
+                    "org.springframework.boot:spring-boot-starter-data-jpa",
+                    "org.springframework.boot:spring-boot-starter-actuator"
+            ],
+            orm : [
+                    "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0",
+                    "com.alibaba:druid:1.0.18",
+                    "mysql:mysql-connector-java"
+            ],
+            commons           : [
+                    "commons-lang:commons-lang:2.6",
+                    "commons-net:commons-net:3.3",
+                    "commons-beanutils:commons-beanutils:1.9.2",
+                    "org.apache.ant:ant:1.9.5",
+                    "com.github.jknack:handlebars:4.0.6",
+                    "commons-io:commons-io:2.5",
+                    "org.apache.commons:commons-email:1.3.2",
+                    "commons-fileupload:commons-fileupload:1.2.2",
+            ],
+            'third-party'     : [
+                    "asm:asm-util:3.3.1",
+                    "asm:asm-commons:3.3.1",
+                    "cglib:cglib:2.2.2",
+                    "net.sourceforge.htmlcleaner:htmlcleaner:2.8",
+                    "org.apache.httpcomponents:httpmime:4.3.5",
+                    "eu.medsea.mimeutil:mime-util:2.1.3", // exclude group: "org.slf4j", module: "slf4j-log4j12"
+                    "ognl:ognl:3.1.2", // exclude group: "javassist", module: "javassist"
+                    "org.bouncycastle:bcprov-jdk16:1.46",
+                    "com.github.stuxuhai:jpinyin:1.1.8"
             ],
             test              : [
-                    "org.codehaus.groovy:groovy-all:${groovy}",
-                    "org.spockframework:spock-spring:${spock}",
-                    "org.spockframework:spock-core:${spock}",
-                    "org.springframework:spring-test:${springVersion}",
-                    "cglib:cglib-nodep:3.2.4",
-                    "org.objenesis:objenesis:2.4",
-                    "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+                    "org.springframework.boot:spring-boot-starter-test",
+                    'junit:junit',
+                    "org.wltea:IKAnalyzer:3.2.8",
+                    'org.codehaus.groovy:groovy-all:${groovy}',
+                    'org.xhtmlrenderer:flying-saucer-pdf-itext5:9.0.8',
             ]
     ]
 }
